# book-service-tempalte

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  docker-compose.yaml  script.js
container/docker/: Dockerfile
container/k8s/kind/: kind-config.yaml
src/: db.rs  init_trace.rs  main.rs  otl_init.rs  rest.rs  tracing.rs
