[package]
name = "book-service-AL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full", "signal"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
axum = "0.6.20"
once_cell = "1.18.0"
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing-appender = "0.2"

[dev-dependencies]
axum-test-helper = "0.3.0"
