[package]
name = "book-service-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full", "signal"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
axum = "0.6.20"
once_cell = "1.18.0"
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tower-http = { version = "0.4.4", features = ["full"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tonic"] }
opentelemetry-semantic-conventions = { version = "0.12.0" }
opentelemetry-http = "0.9.0"
axum-tracing-opentelemetry = "0.14.1"
tracing-opentelemetry-instrumentation-sdk = "0.14.1"
init-tracing-opentelemetry = { version = "0.14.1", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
serde_json = "1.0.107"

[dev-dependencies]
axum-test-helper = "0.3.0"


[features]
otlp-over-http = [
  "opentelemetry-otlp/reqwest-client",
  "opentelemetry-otlp/reqwest-rustls",
  "opentelemetry-otlp/http-proto",
  "opentelemetry-otlp/tls",
]
